fixed border not rendering on mobile view calendar with state in calendar component, and also converted all pixels to ems

--- a/src/Calendar.module.css
+++ b/src/Calendar.module.css
@@ -1,32 +1,32 @@
 .Calendar {
-    border: 5px solid;
-    padding: 3px;
-    margin-bottom: 50px;
+    border: 0.3em solid;
+    padding: 0.1em;
+    margin-bottom: 0.5em;
     background-color: rgb(174, 201, 245);
 }
 
 .Completed {
     background-color: rgb(174, 201, 245);
     text-align: center;
-    border: 2px solid;
-    padding: 3px;
+    border: 0.15em solid;
+    padding: 0.1em;
 }
 
 .Incomplete {
     background-color: rgb(174, 201, 245);
     text-align: center;
-    border: 2px solid;
-    padding: 3px;
+    border: 0.15em solid;
+    padding: 0.1em;
 }
 
 .Completed:hover {
-    box-shadow: 0.5px 0.5px 0.5px 0.5px;
+    box-shadow: 0.02em 0.02em 0.02em 0.02em;
     cursor: pointer;
     background-color: rgb(179, 230, 104);
 }
 
 .Incomplete:hover {
-    box-shadow: 0.5px 0.5px 0.5px 0.5px;
+    box-shadow: 0.02em 0.02em 0.02em 0.02em;
     cursor: pointer;
     background-color: rgb(215, 125, 125);
 }
@@ -36,33 +36,5 @@
     .Calendar {
         transform: scale(0.9);
         transform-origin: center;
-    }
-
-    .Calendar td[data-day="Monday"]::before {
-        content: "Mon";
-    }
-    .Calendar td[data-day="Tuesday"]::before {
-        content: "Tue";
-    }
-    .Calendar td[data-day="Wednesday"]::before {
-        content: "Wed";
-    }
-    .Calendar td[data-day="Thursday"]::before {
-        content: "Thu";
-    }
-    .Calendar td[data-day="Friday"]::before {
-        content: "Fri";
-    }
-    .Calendar td[data-day="Saturday"]::before {
-        content: "Sat";
-    }
-    .Calendar td[data-day="Sunday"]::before {
-        content: "Sun";
-    }
-    .Calendar td {
-        font-size: 0;
-    }
-    .Calendar td::before {
-        font-size: 16px;
     }
 }
