--- a/src/CurrentDay.module.css
+++ b/src/CurrentDay.module.css
@@ -9,7 +9,7 @@
 }
 
 .Exercise {
-    margin-bottom: 100px;
+    margin-bottom: 4em;
 }
 
 .ExerciseName {
@@ -21,7 +21,7 @@
 }
 
 .Rir {
-    font-size: 13px;
+    font-size: 0.73em;
 }
 
 .ExerciseNameContainer {
@@ -32,48 +32,48 @@
 }
 
 .EndMesoEarly {
-    margin-bottom: 50px;
-    margin-top: 30px;
+    margin-bottom: 2em;
+    margin-top: 2em;
     font-weight: bold;
     background-color: rgb(233, 108, 108);
     color: rgb(84, 0, 0);
-    box-shadow: 1px 1px 1px 1px;
+    box-shadow: 0.1em 0.1em 0.1em 0.1em;
     cursor: pointer;
-    border: solid black 1px;
+    border: solid black 0.1em;
 }
 
 .EndMesoEarly:hover {
     background-color: red;
-    box-shadow: 2px 2px 2px 2px;
+    box-shadow: 0.2em 0.2em 0.2em 0.2em;
     color: black;
 }
 
 .AddSet {
     cursor: pointer;
-    margin-right: 5px;
+    margin-right: 0.5em;
     background-color: rgb(159, 212, 79);
-    border: solid black 1px;
+    border: solid black 0.1em;
 }
 
 .AddSet:hover {
-    background-color: rgb(1, 163, 1);
+    background-color: rgb(47, 172, 47);
 }
 
 .RemoveSet {
     cursor: pointer;
-    margin-left: 5px;
+    margin-left: 0.5em;
     background-color: rgb(231, 168, 168);
-    border: solid black 1px;
+    border: solid black 0.1em;
 }
 
 .RemoveSet:hover {
-    background-color: rgb(179, 1, 1);
+    background-color: rgb(197, 65, 65);
 }
 
 .LogSet {
     cursor: pointer;
-    border: solid black 1px;
-    margin: 3px;
+    border: solid black 0.1em;
+    margin: 0.2em;
     background-color: rgb(175, 213, 251);
 }
 
@@ -83,9 +83,9 @@
 
 .Weight, .Reps{
     background-color: rgb(212, 229, 246);
-    border: solid black 1px;
+    border: solid black 0.1em;
     text-align: center;
-    margin: 1px;
+    margin: 0.1em;
     appearance: none;
     -moz-appearance: textfield;
 }
